2023-06-02 Franz Holzinger <franz@ttproducts.de>
    * compatibility Deprecation no.92947: replace TYPO3_MODE by TYPO3 or remove this constant
    * add compatibility for TYPO3 12
    * use feature no. 85160: auto create management DB fields from TCA ctrl

2022-04-08 Franz Holzinger <franz@ttproducts.de>
    * add compatibility for PHP 8

2021-12-31  Franz Holzinger <franz@ttproducts.de>
    * add compatibility for TYPO3 11

2021-04-20  Franz Holzinger <franz@ttproducts.de>
    * bugfix extension manager configuration
    * compatibility for TYPO3 10: replace eID parameter by Middleware and the parameter transactor.

2021-04-01  Franz Holzinger <franz@ttproducts.de>
    * add compatibility for TYPO3 10
    * remove compatibility for TYPO3 6.2

2020-08-27  Franz Holzinger <franz@ttproducts.de>
    * new feature: make the orderuid a varchar to allow even characters inside of order numbers.

2020-04-30  Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9: replace deprecated methods

2019-12-20  Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9: transactor 0.8.0 now runs fully under TYPO3 9.5.
    * set compatibility = 0 to use the new API by default.
    * Deprecation 75371: replace GeneralUtility::array2xml_cs() by GeneralUtility::array2xml()

2019-11-05  Franz Holzinger <franz@ttproducts.de>
    * bugfix: paymentmethods.xml must be used in the old API for the payment methods, and not paymentmethods.xlf.
    * remove dependency from migration_core. Replace all t3lib_div calls by TYPO3\CMS\Core\Utility\GeneralUtility. Replace all t3lib_extMgm calls by TYPO3\CMS\Core\Utility\ExtensionManagementUtility. Replace t3lib_Singleton by \TYPO3\CMS\Core\SingletonInterface
    * use makeInstance instead of getUserObj

2019-08-27  Franz Holzinger <franz@ttproducts.de>
    * readd ext_autoload.php for TYPO3 6.2

2019-03-06  Franz Holzinger <franz@ttproducts.de>