@@ -16,7 +16,7 @@ $EM_CONF[$_EXTKEY] = [
     'author_company' => '',
     'constraints' => [
         'depends' => [
-            'php' => '7.4.0-8.1.99',
+            'php' => '7.4.0-8.4.99',
             'typo3' => '10.4.0-12.4.99',
             'div2007' => '1.14.0-0.0.0',
         ],
