@@ -39,6 +39,7 @@
 use TYPO3\CMS\Core\Utility\ExtensionManagementUtility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 
+// deprecated: will be removed in 2024
 
 class tx_transactor_api {
     protected static $cObj;
